included smooth scrolling, code clipboard button, included line numbers with line number spacing fix, reduced white in dark mode

--- a/docs/.vuepress/theme/styles/code.styl
+++ b/docs/.vuepress/theme/styles/code.styl
@@ -93,7 +93,12 @@ div[class*="language-"]
         position relative
         z-index 4
         user-select none
-        font-size 0.875em
+        line-height 1.9
+        letter-spacing 0
+        padding 0 0.313rem
+        margin 0
+        font-size 0.938rem
+        border-radius 3px
     &::after
       content ''
       position absolute
